--- a/turtle.html
+++ b/turtle.html
@@ -6,8 +6,7 @@
     <body>
         
         <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
-        <script src="background.js"></script>
-        <div id="menu"><img src="white.png"></img></div>
+        <script src="game1.js"></script>
         
     </body>
 </html>
