--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <html>
     <head>
-        <title>turtle</title>
+        <title>talele</title>
         <link rel="stylesheet" src="style.css">
+        <link rel="icon" src="favicon.png">
     </head>
     <body>
-        
-        <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
-        <script src="background.js"></script>
-        <div id="menu"><img src="white.png"></img></div>
-        
+        <div id="menu">
+        <ul>
+            <a href="turtle.html">turtle</a>
+        </ul>
+        </div>
     </body>
 </html>
