--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>talele</title>
         <link rel="stylesheet" src="style.css">
-        <link rel="icon" src="favicon.png">
+        <link rel="icon" href="favicon.png">
     </head>
     <body>
         <div id="menu">
