--- a/public/game.html
+++ b/public/game.html
@@ -4,6 +4,7 @@
     <head>
         <title>multiplayer miner</title>
         <link rel='stylesheet' href='style.css'>
+        <link rel="icon" type="image/png" href="/public/icon.png"/>
     </head>
     <body>
         
