--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
     <head>
         <title>multi-mining login</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="icon" type="image/png" href="/public/icon.png"/>
+
     </head>
     <body>
         <div id="bg"></div>
