--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>multi-mining login</title>
         <link rel="stylesheet" href="style.css">
-        <link rel="icon" type="image/png" href="/public/icon.png"/>
+        <link rel="icon" type="image/png" href="/icon.png"/>
 
     </head>
     <body>
