--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,10 @@
             <input type="text" placeholder="user" id="username"><br>
             <input type="password" placeholder="password" id="pass"><br>
             <input type="button" value="login" id="login">
-
             <script src="/socket.io/socket.io.js"></script>
             <script src="login.js"></script>
 
         </form>
+        <p id="t2">if you don't have an account, it will be created automatically</p>
     </body>
 </html>
